--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=4000 next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@casl/ability": "^6.3.2",
+    "@casl/react": "^3.1.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
+    "mdi-material-ui": "^7.6.0",
     "next": "12.3.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-i18next": "^12.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "yup": "^0.32.11"
   },
