--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "mdi-material-ui": "^7.6.0",
     "next": "12.3.1",
     "nprogress": "^0.2.0",
