--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
+    "i18next": "^22.0.6",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.2",
+    "i18next-localstorage-cache": "^1.1.1",
     "mdi-material-ui": "^7.6.0",
     "next": "12.3.1",
     "nprogress": "^0.2.0",
