--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
+    "@iconify/react": "^4.1.0",
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.38.0",
     "react-i18next": "^12.0.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-popper": "^2.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
